--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,9 +11,11 @@
         "test": "vitest"
     },
     "dependencies": {
+        "@googlemaps/js-api-loader": "^1.16.8",
         "@microsoft/signalr": "^8.0.7",
         "@tanstack/react-query": "^5.53.1",
         "@tanstack/react-router": "^1.52.3",
+        "@vis.gl/react-google-maps": "^1.1.0",
         "openapi-fetch": "^0.12.0",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
@@ -24,6 +26,7 @@
         "@eslint/js": "^9.9.1",
         "@tanstack/router-devtools": "^1.52.3",
         "@tanstack/router-plugin": "^1.52.0",
+        "@types/google.maps": "^3.57.0",
         "@types/react": "^18.3.3",
         "@types/react-dom": "^18.3.0",
         "@vitejs/plugin-react": "^4.3.1",
