feat: hide secrets

--- a/Backend/appsettings.json
+++ b/Backend/appsettings.json
@@ -7,6 +7,6 @@
     },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "DefaultConnection": "Server=localhost,1433;Database=TemplateDb;User Id=sa;Password=Password_2_Change_4_Real_Cases_&;TrustServerCertificate=True"
+        "DefaultConnection": "Server=localhost,1433;Database=LetsMeetDb;User Id=sa;Password=Password_2_Change_4_Real_Cases_&;TrustServerCertificate=True"
     }
 }
