--- a/Backend/Backend.csproj
+++ b/Backend/Backend.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>b6dc06f8-cc63-4ad1-9b55-d9b08d9637bd</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
