--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,6 +11,7 @@
         "test": "vitest"
     },
     "dependencies": {
+        "@clerk/clerk-react": "^5.7.0",
         "@googlemaps/js-api-loader": "^1.16.8",
         "@microsoft/signalr": "^8.0.7",
         "@tanstack/react-query": "^5.53.1",
