--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -18,6 +18,7 @@
         "@tanstack/react-router": "^1.52.3",
         "@vis.gl/react-google-maps": "^1.1.0",
         "guid-typescript": "^1.0.9",
+        "haversine-distance": "^1.2.3",
         "openapi-fetch": "^0.12.0",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
