--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -19,6 +19,7 @@
         "@vis.gl/react-google-maps": "^1.1.0",
         "guid-typescript": "^1.0.9",
         "haversine-distance": "^1.2.3",
+        "mathjs": "^13.1.1",
         "openapi-fetch": "^0.12.0",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
