--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,10 +11,12 @@
         "test": "vitest"
     },
     "dependencies": {
+        "@clerk/clerk-js": "^5.20.0",
         "@clerk/clerk-react": "^5.7.0",
         "@googlemaps/js-api-loader": "^1.16.8",
         "@microsoft/signalr": "^8.0.7",
         "@tanstack/react-query": "^5.53.1",
+        "@tanstack/react-query-devtools": "^5.55.4",
         "@tanstack/react-router": "^1.52.3",
         "@vis.gl/react-google-maps": "^1.1.0",
         "guid-typescript": "^1.0.9",
